# TrueLove

./: .gitignore  README.md  config.example.yml  config.yml  main.py  pyproject.toml  test.py
frontend/: index.html  script.js  style.css
truelove/: __init__.py
truelove/config/: config.py
truelove/db/: __init__.py  base.py  db.py  dynamic.py  media.py  video.py  watching.py
truelove/db/models/: __init__.py  dynamic.py  media.py  schema.py  video.py  watching.py
truelove/logger/: __init__.py
truelove/process/: __init__.py  event.py  exception.py  manager.py  plugin.py  utils.py
truelove/process/cores/: __init__.py  basecore.py  bilix.py
truelove/routes/: __init__.py  app.py  router.py  utils.py
truelove/routes/models/: request.py  response.py
